Bug 1434456 - Remove scrollbar from shortcut table in userguide

--- a/ui/css/treeherder-global.css
+++ b/ui/css/treeherder-global.css
@@ -410,7 +410,7 @@ h4 {
     width:100%;
 }
 
-#shortcut-table-card {
+#onscreen-shortcuts div div.card {
     max-height: 90vh;
     overflow: auto;
 }
